# mlresearch

./: .gitignore  README.md  pyproject.toml  segnet.py
mlresearch/: config.py  loss.py  losses.py
mlresearch/configs/: config.yaml  segnet.yaml
mlresearch/models/: segnet.py  unet.py
