[tool.poetry]
name = "mlresearch"
version = "0.1.0"
description = ""
authors = ["korus <ruslan.kosarev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
scikit-image = "^0.18.3"
omegaconf = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
